# cloud-experiments

./: .gitignore  CAP-THEOREM-EXPERIMENT.md  IMPLEMENTATION-GUIDE.md  README.md  RESEARCH-FRAMEWORK.md  cap_measurement.py  cap_test_simple.py  hybrid_consistency.py  load_generator.py  requirements.txt  run_all_experiments.py  setup-cosmos-db.sh
.github/workflows/: deploy-azure.yml  deploy-ironclad-db.yml  test.yml
azure/database/ironclad-db/: .env.example  .gitignore  ALTERNATIVE_DEPLOYMENT_OPTIONS.md  BUSINESS_CASE.md  Cargo.toml  DEPLOYMENT.md  DEPLOYMENT_INSTRUCTIONS.md  DEPLOYMENT_STATUS.md  Dockerfile  EXPERIMENT_GUIDE.md  GITHUB_ACTIONS_SETUP.md  README.md  TESTING.md  deploy_ironclad.ps1  deploy_ironclad.sh  test_ironclad.sh
azure/database/ironclad-db/src/: azure_disk.rs  buffer_pool.rs  error.rs  kvstore.rs  lib.rs  main.rs  wal.rs
azure/database/ironclad-db/tests/: integration_tests.rs
azure/iot/: ADVANCED_IOT_HUB_FEATURES.md  C2D_MESSAGING_GUIDE.md  DEPLOYMENT_AND_OPERATIONS.md  MESSAGE_ROUTING_AND_EDGE.md  MULTI_HUB_FAILOVER_ARCHITECTURE.md  NETWORK_SECURITY_AND_OPERATIONS.md  README.md  device_config.json  requirements.txt
tests/: __init__.py  conftest.py  test_cap_scripts.py
